2001-12-07  Alexander Larsson  <alla@lysator.liu.se>

	* src/interface.c:
	Make window and upper part of system view not shrinkable.

2001-12-03  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: unref the tmp_pixbuf to plug leak

	* memmaps.c: fix mem leaks

2001-12-02  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: add gconf notifyers for most of the config values
	Tricky part will be hidden processes

2001-11-29  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.[c,h]: fix up issues with recent changes to columns

	* release 1.1.1

2001-11-18  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: clean up some code, remove some hackery,
	make things better. That accomplished, could I ever be
	evil? Bring back hardcoded icons.
	
	* proctable.c: ditto. Make things better.

2001-11-18  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: don't display "icon" for the icon column header.
	Some minor cleanups also

	* procdialogs.c: if treeview doesn't return a name for the
	column then it's the icon column

	* interface.c: remove underlines from optionmenu since they
	don't seem to work

2001-11-18  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: make insert_info_to_tree and remove_info_from_tree
	external functions. New function to find a process given a name
	or PID. 
	(upddate_info): simplify this a lot 

	* favorites.c: explictly hide or reshow processes instead of
	queuing an update. Makes things simpler and faster :)

	* callbacks.c, procdialogs.c: no need to queue an update when
	hiding processes
	
	* Also bring back libwnck :)

2001-11-17  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: add a new column showing command arguments.
	Treeview needs to stop insisting on resizing columns :)

	* infoview.c: show the name for the comanda

	* proctable.c: remove the info->cmd since I won't be getting
	process app names for the time being. A little less bloat
	can't hurt eh?

2001-11-16  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: fix memory leak
