@@ -1,3 +1,8 @@
+2001-12-11  Kevin Vandersloot <kfv101@psu.edu>
+
+	* compile with GTK_DISABLE_DEPRECATED. Also remove all
+	gnome_dialogs except for the root stuff
+
 2001-12-07  Alexander Larsson  <alla@lysator.liu.se>
 
 	* src/interface.c:
